--- a/py_unittest/docker/db_connection_part/Dockerfile
+++ b/py_unittest/docker/db_connection_part/Dockerfile
@@ -1,10 +1,12 @@
 FROM python:3.7
 
-FROM google/cloud-sdk:274.0.1
+RUN pip install \
+  dataset mysqlclient google-cloud-bigquery
 
 RUN apt-get update && \
-  apt-get install -y vim gzip wget 
+  apt-get install -y vim gzip wget
+#  libmysqlclient-dev 
 
-COPY ./for-my-study-bq.json /tmp/for-my-study-bq.json
-RUN gcloud auth activate-service-account --key-file /tmp/for-my-study-bq.json && \
-  rm /tmp/for-my-study-bq.json
+#COPY ./for-my-study-bq.json /tmp/for-my-study-bq.json
+#RUN gcloud auth activate-service-account --key-file /tmp/for-my-study-bq.json && \
+#  rm /tmp/for-my-study-bq.json
